Allow shrinking the main window

The welcome screen's minimum size is quite large.  This change allows
the window to be smaller than the welcome screen when the welcome screen
is not visible.

BUG: 478577

Before and after screenshot:
![Before and after screenshot](/uploads/71f685c89a7324444b89e1abd0592b80/image.png)